--- a/recipes/thai-chicken.html
+++ b/recipes/thai-chicken.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="thai-chicken.html">Spicy Thai Basil Chicken (Pad Krapow Gai)</a>
-    
+    <h1>Spicy Thai Basil Chicken (Pad Krapow Gai)</h1>
 </body>
 </html>
