--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="thai-chicken.html">Spicy Thai Basil Chicken (Pad Krapow Gai)</a>
+    <ul>
+        <li><a href="recipes/thai-chicken.html">Spicy Thai Basil Chicken (Pad Krapow Gai)</a></li>
+        <li></li>
+        <li></li>
+    </ul>
+    
     
 </body>
 </html>
