--- a/recipes/thai-chicken.html
+++ b/recipes/thai-chicken.html
@@ -7,5 +7,35 @@
 </head>
 <body>
     <h1>Spicy Thai Basil Chicken (Pad Krapow Gai)</h1>
+    <img src="https://www.allrecipes.com/thmb/aSxj3Afzch7kyOuU76DSjVxWCRU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/257938-spicy-thai-basil-chicken-chef-john-4x3-84457b900e2e4ec5823e8ace55df7b34.jpg" alt="Spicy Thai Chicken">
+    <h3>Description</h3>
+    <p>My version of this classic Thai dish has spectacular taste even with regular basil instead of Thai or holy basil. The sauce actually acts like a glaze as the chicken mixture cooks over high heat. The recipe works best if you chop or grind your own chicken and have all ingredients prepped before you start cooking.</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>1/3 cup chicken broth</li>
+        <li>1 tablespoon oyster sauce</li>
+        <li>1 tablespoon soy sauce, or as needed</li>
+        <li>2 teaspoons fish sauce</li>
+        <li>1 teaspoon white sugar</li>
+        <li>1 teaspoon brown sugar</li>
+        <li>2  tablespoons vegetable oil</li>
+        <li>1 pound skinless, boneless chicken thighs, coarsely chopped</li>
+        <li>1/4 cup sliced shallots</li>
+        <li>4 cloves garlic, minced</li>
+        <li>2 tablespoons minced Thai chilies, Serrano, or other hot pepper</li>
+        <li>1 cup very thinly sliced fresh basil leaves</li>
+        <li>2 cups hot cooked rice</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Gather ingredients.</li>
+        <li>Whisk chicken broth, oyster sauce, soy sauce, fish sauce, white sugar, and brown sugar together in a bowl until well blended.</li>
+        <li>Heat large skillet over high heat. Drizzle in oil. Add chicken and stir fry until it loses its raw color, 2 to 3 minutes.</li>
+        <li>Stir in shallots, garlic, and sliced chilies. Continue cooking on high heat until some of the juices start to caramelize in the bottom of the pan, about 2 or 3 more minutes.</li>
+        <li>Add about a tablespoon of the sauce mixture to the skillet; cook and stir until sauce begins to caramelize, about 1 minute.</li>
+        <li>Pour in the rest of the sauce. Cook and stir until sauce has deglazed the bottom of the pan. Continue to cook until sauce glazes onto the meat, 1 or 2 more minutes. Remove from heat.</li>
+        <li>Stir in basil. Cook and stir until basil is wilted, about 20 seconds. Serve with rice.</li>
+        <li>Serve hot and enjoy!</li>
+    </ol>
 </body>
 </html>
